Updated the enemy list order in DOTSamurai_enemies.txt. Updated descriptions for base game achievements in achievements.html.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -423,8 +423,9 @@
                     <td>
                         Defeated both <a class="text-sky-400 hover:text-sky-600" href="">Gozuki</a> and 
                         <a class="text-sky-400 hover:text-sky-600" href="">Mezuki</a> in a single mission. This can be done in the 
-                        following missions: <a class="text-sky-400 hover:text-sky-600" href="">The Village of Cursed Blossoms</a> and 
-                        <a class="text-sky-400 hover:text-sky-600" href="">The Refined Man of the Underworld</a>.
+                        following missions: <a class="text-sky-400 hover:text-sky-600" href="">The Village of Cursed Blossoms</a>,
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Refined Man of the Underworld</a>, and
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Golden Castle</a>.
                     </td>
                 </tr>
 
@@ -436,7 +437,8 @@
                     </div></td>
                     <td>
                         Defeated the boss of <a class="text-sky-400 hover:text-sky-600" href="">The Viper's Sanctum</a> without 
-                        breaking the statues of Shirohami. (DO NOT break any of the Snake Statues!)
+                        breaking the statues of Shirohami. (DO NOT break any of the Snake Statues!) It is recommended to return to
+                        this mission later to get this achievement.
                     </td>
                 </tr>
 
@@ -449,9 +451,9 @@
                     <td>
                         In the main mission: <a class="text-sky-400 hover:text-sky-600" href="">A Way Out</a> there are 2 regions
                         with searchlights, getting spotted by the searchlight will spawn in a Red Orb nearby. Destroying the Red 
-                        Orb will get rid of the spotlight. Destroying both Red Orbs in the level will unlock the achievement. You
-                        can view the guide
-                        <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=YrWRIkr8T74" target="_blank" rel="noopener noreferrer">here</a>.
+                        Orb will get rid of the spotlight. Destroying both Red Orbs in the level will unlock the achievement. You can
+                        also shoot Tatarimokke directly to drive it away in these regions. You can view the guide
+                        <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=rBvXtzoPzGc" target="_blank" rel="noopener noreferrer">here</a>.
                     </td>
                 </tr>
 
@@ -475,10 +477,11 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/hidden_hopes.png" alt="Hidden Hopes achievement">
                     </div></td>
                     <td>
-                        Encountered all of the <a class="text-sky-400 hover:text-sky-600" href="">Usura-Hicho</a> in the main 
-                        mission: <a class="text-sky-400 hover:text-sky-600" href="">The Frenzied Blaze</a>. Interact with 3 
-                        swarms of frozen butterflies. You can view the guide
-                        <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=py6E_BsXPEU" target="_blank" rel="noopener noreferrer">here</a>.
+                        Encountered all of the <a class="text-sky-400 hover:text-sky-600" href="">Usura-Hicho</a> 
+                        butterflies in the main mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Frenzied Blaze</a>. Interact with all 3 
+                        Usura-Hicho butterflies. You can view the guide
+                        <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=sFx1349w5qw" target="_blank" rel="noopener noreferrer">here</a>.
                     </td>
                 </tr>
 
@@ -491,7 +494,7 @@
                     <td>
                         Ring and drop all of the bells in the main mission: <a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a>.
                         There are a total of 6 Bells. You can view the guide 
-                        <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=k-L1_8kgkSU" target="_blank" rel="noopener noreferrer">here</a>.
+                        <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=qqGBqeUJmsg" target="_blank" rel="noopener noreferrer">here</a>.
                     </td>
                 </tr>
 
@@ -517,7 +520,7 @@
                     <td>
                         Defeated each of the Seven Spears in the main mission:
                         <a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing in Daigo</a>. You can view the guide
-                        <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=I-2-UkPfUjc" target="_blank" rel="noopener noreferrer">here</a>.
+                        <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=-QJKK2TLBTU" target="_blank" rel="noopener noreferrer">here</a>.
                     </td>
                 </tr>
 
@@ -620,7 +623,7 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/lover_of_letters.png" alt="Lover of Letters achievement">
                     </div></td>
                     <td>
-                        Displayed a calligraphy scroll in your hut.
+                        Displayed a calligraphy scroll in your hut. You can buy calligraphy scrolls from the Hidden Tea House with Glory.
                     </td>
                 </tr>
 
@@ -708,8 +711,8 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/twilight_walker.png" alt="Twilight Walker achievement">
                     </div></td>
                     <td>
-                        Completed your first Twilight Mission. The Main Mission version of a Twilight Mission must be completed
-                        before the Twilight Mission will unlock.
+                        Completed your first Twilight Mission. The Twilight Mission's associated Main and/or Sub Missions must be completed
+                        before the Twilight Mission can be unlocked.
                     </td>
                 </tr>
 
@@ -743,7 +746,7 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/yokai_quelling_master.png" alt="Yokai Quelling Master achievement">
                     </div></td>
                     <td>
-                        Defeated all types of Yokai. There are 34 small Yokai and 15 large Yokai. All of the large Yokai are 
+                        Defeated all types of Yokai. There are 34 small Yokai, and 15 large Yokai. All of the large Yokai are 
                         bosses and are un-missable. You can check your progress by going to Titles &#10230 Gameplay Records 
                         &#10230 Small Yokai Defeated. <br><br>
 
@@ -813,7 +816,7 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/fuse_it_or_lose_it.png" alt="Fuse It or Lose It achievement">
                     </div></td>
                     <td>
-                        Fused any Soul Core until it reached rank 9. To upgrade a Soul Core go to Shrine &#10230 Manage Soul Cores
+                        Fused any Soul Core until it has reached rank 9. To upgrade a Soul Core go to Shrine &#10230 Manage Soul Cores
                         &#10230 Soul Fusion &#10230 Combine multiple of the same Soul Core to increase the level until it reaches
                         lvl 9.
                     </td>
@@ -1080,7 +1083,7 @@
                         <br><br>
 
                         Each Region excluding the last Region "Afterglow" have 25 Kodama. There are a
-                        total of 150 Kodama in the base game. You start each Region with 3 Elixirs and gain an additional one
+                        total of 150 Kodama in the base game. You start each Region with 3 Elixirs and gain an additional base Elixir
                         for every 5 Kodama found. Below is a list of missions and the number of Kodama in those missions:
                         <br><br>
 
@@ -1215,8 +1218,7 @@
                         Title List &#10230 Ungyo Table List &#10230 Reputable Tea Ceremony Master. The Guardian Spirit 
                         <a class="text-sky-400 hover:text-sky-600" 
                         href="https://liukang1080.github.io/gamewiki/nioh2/equipment/guardian_spirits/guardian_spirits.html#Isanagami" 
-                        target="_blank" rel="noopener noreferrer">Isanagami</a> 
-                        increases Tea Utensil drop rate by 10 %.
+                        target="_blank" rel="noopener noreferrer">Isanagami</a> increases Tea Utensil drop rate by 10 %.
                     </td>
                 </tr>
 
