Fixed a spelling error in achievements.html.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -1522,7 +1522,7 @@
                     <td>
                         Caused <a class="text-sky-400 hover:text-sky-600" href="">Oboroguruma</a> to release Amrita from its
                         carriage at least 10 times. Look at which part of the face is glowing and hit the enemy with the specific
-                        stance: Glowing Horns = High Stance, Glow Eyes = Mid Stance, Glowing Tongue = Low Stance.
+                        stance: Glowing Horns = High Stance, Glowing Eyes = Mid Stance, Glowing Tongue = Low Stance.
                     </td>
                 </tr>
 
