Fixed the name of a soul core in cores_list.html. Added more content to enemy_item_drops.txt.

--- a/nioh2/equipment/soul_cores/cores_list.html
+++ b/nioh2/equipment/soul_cores/cores_list.html
@@ -2629,12 +2629,12 @@
                     </tr>
 
                     <!-- ==========
-                    Maelstrom Fox 
+                    Maelstrom Fox Spirit
                     ========== -->
                     <tbody class="even:bg-dark-gray-2">
                         <tr>
                             <td rowspan="2"><a class="group w-[140px] flex flex-col justify-center items-center gap-3" href="">
-                                <span class="text-sky-400 group-hover:text-sky-600">Maelstrom Fox</span>
+                                <span class="text-sky-400 group-hover:text-sky-600">Maelstrom Fox Spirit</span>
                                 <img src="./img/maelstrom_fox.png" alt="">
                             </a></td>
                             <td rowspan="2">5</td>
