Updated function name in nioh2_background_image.js. Fixed the class for the global parent <body> tag to prepare for random background images. Added more content to DOTSamurai_missions and twilight_missions .txt files.

--- a/nioh3/nioh3.html
+++ b/nioh3/nioh3.html
@@ -33,7 +33,7 @@
     npx tailwindcss -i ./css/input.css -o ./css/output.css --watch
     ========== ========== ========== -->
 </head>
-<body class="site-index font-noto">
+<body class="bg-fixed lg:bg-cover font-noto">
     <!-- 
     ========== ========== ========== ========== ==========
     Header
