Added nioh3_index_image_4.png. Added nioh3_background_image.js. Added background_image.js function to nioh3.html.

--- a/nioh3/nioh3.html
+++ b/nioh3/nioh3.html
@@ -548,8 +548,8 @@
     <!-- defer ensures that the page gets fully loaded before the JavaScript executes -->
 
     <!-- Background JS -->
-    <!-- <script src="https://liukang1080.github.io/gamewiki/nioh2/js/nioh2_background_image.js" type="text/javascript" defer></script> -->
-    <!-- <script src="./js/nioh2_background_image.js" type="text/javascript" defer></script> -->
+    <!-- <script src="https://liukang1080.github.io/gamewiki/nioh3/js/nioh3_background_image.js" type="text/javascript" defer></script> -->
+    <script src="./js/nioh3_background_image.js" type="text/javascript" defer></script>
 
 </body>
 </html>
