Added a new card image nioh3_card.png. Renamed old nioh3 card image. Updated the image url for the background in nioh3_background_image.js and nioh3.html.

--- a/nioh3/nioh3.html
+++ b/nioh3/nioh3.html
@@ -57,7 +57,8 @@
                 </a>
 
                 <!-- TODO Nioh 3 Logo -->
-                <!-- <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a> -->
+                 <!-- https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png -->
+                <a href="https://liukang1080.github.io/gamewiki/nioh3/nioh3.html"><img src="./img/nioh3_logo_1.png" alt="Nioh 2 main logo"></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
