Updated the description of smithing text item drop rate in armor_texts, hidden_skills, misc_texts, and weapon_texts .html.

--- a/nioh2/tools/smithing_texts/hidden_skills.html
+++ b/nioh2/tools/smithing_texts/hidden_skills.html
@@ -260,28 +260,28 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">Art of Combat Skills (Hidden Skills):</span> Behave the same as other Smithing 
-                Texts in terms of drop rate and drop mechanics. Rather than unlocking armor or weapon pieces they unlock Hidden
-                Skills for the Weapons, Ninjutsu, Onmyo Magic, and Shiftling trees. All Art of Combat Skills will drop as an 
-                <span class="text-exotic-text-color">Exotic Item</span> regardless of the difficulty. Once accquired that skill will
-                automatically unlock in that specific Skill Tree.
+                <span class="font-bold text-red-600">Art of Combat Skills (Hidden Skills):</span> Behave the same as other
+                Smithing Texts in terms of drop rate and drop mechanics. Rather than unlocking armor or weapon pieces they unlock 
+                Hidden Skills for the Weapons, Ninjutsu, Onmyo Magic, and Shiftling trees. All Art of Combat Skills will drop as
+                an <span class="text-exotic-text-color">Exotic Item</span> regardless of the difficulty. Once accquired that 
+                skill will automatically unlock in that specific Skill Tree.
             </p>
             <img src="./img/hidden_skill_drop.png" alt="Full Hidden Skill item drop image">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">How Luck affects Hidden Skills:</span> Luck does 
                 <span class="font-bold text-red-600">NOT</span> affect the drop rate of Smithing Texts and Hidden Skills. Luck 
-                only affects the rarity of items that drop, NOT the chance of an item dropping. Buffs like Luck Bringer Talisman, 
+                only affects the rarity of items that drop, NOT the chance of an item dropping. Buffs like Luck Bringer Talisman,
                 and Soul Purge Talisman do not affect the Smithing Text and Hidden Skills drop rate. Tempering Luck+ attributes 
                 on armor, accessories, and Soul Cores also does not affect the Smithing Texts and Hidden Skills drop rate.
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">How Item Drop Rate affects Hidden Skills:</span> Item Drop Rate buffs 
-                <span class="font-bold text-red-600">DOES</span> affect the Smithing Text and Hidden Skills drop rate. There is 
+                <span class="font-bold text-red-600">DOES</span> affect the Smithing Text and Hidden Skills drop rate. There is
                 no active buff that we can use to manually increase our IDR at will, but we can temper on the attribute 
-                "<span class="text-uncommon-text-color">Item Drop Rate</span>" onto the Weapon & Armor pieces, 
-                Accessories, and Soul Cores.
+                "<span class="text-uncommon-text-color">Item Drop Rate</span>" onto our Armor pieces, Accessories, and Soul 
+                Cores.
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
