--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -286,10 +286,10 @@
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">How Item Drop Rate affects Smithing Texts:</span> Item Drop Rate buffs 
-                <span class="font-bold text-red-600">DOES</span> affect the Smithing Text and Hidden Skills drop rate. There is 
+                <span class="font-bold text-red-600">DOES</span> affect the Smithing Text and Hidden Skills drop rate. There is
                 no active buff that we can use to manually increase our IDR at will, but we can temper on the attribute 
-                "<span class="text-uncommon-text-color">Item Drop Rate</span>" onto the Weapon & Armor pieces, 
-                Accessories, and Soul Cores.
+                "<span class="text-uncommon-text-color">Item Drop Rate</span>" onto our Armor pieces, Accessories, and Soul 
+                Cores.
             </p>
 
 			<p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
